# oil_equipment_failure_prediction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  save_model.py
data/: ML_dataset_full_field_v2.xlsx
notebooks/: eda_oilfield.py  model_oilfield.py
tutorials/: eda_tutorial.md  modeling_tutorial.md
